# stereo_odometry_ros

./: CMakeLists.txt  README.md  package.xml
config/: image_publisher_params.yaml  stereo_odometry_params.yaml
include/stereo_odometry_ros/: camera.hpp  frame.hpp  stereo_odometry.hpp
launch/: image_publisher.launch.py  stereo_odometry.launch.py
src/: camera.cpp  frame.cpp  image_publisher_node.cpp  stereo_odometry.cpp  stereo_odometry_node.cpp
